--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,3 +1,4 @@
-@import "partials/normalize.scss";
+@import "partials/setup.scss";
+@import "partials/typography.scss";
 @import "partials/header.scss";
 @import "partials/nav.scss";
