--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,4 +1,5 @@
 @import "partials/setup.scss";
 @import "partials/typography.scss";
+@import "partials/variables.scss";
 @import "partials/header.scss";
 @import "partials/nav.scss";
