--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,5 +1,6 @@
-@import "partials/setup.scss";
-@import "partials/typography.scss";
-@import "partials/variables.scss";
-@import "partials/header.scss";
-@import "partials/nav.scss";
+@import "partials/setup";
+@import "partials/variables";
+@import "partials/typography";
+@import "partials/header";
+@import "partials/nav";
+@import "partials/index"
