--- a/styles/styles.css
+++ b/styles/styles.css
@@ -267,24 +267,24 @@ blockquote {
 }
 
 .indexPage header {
-  background-image: url("../delicious-assets/home-1.jpeg");
+  background-image: url("../deliciousAssets/home1.jpeg");
   background-size: cover;
   background-repeat: no-repeat;
   height: 70vh;
 }
 
 .blogPage header {
-  background-image: url("../delicious-assets/blog-1.jpeg");
+  background-image: url("../deliciousAssets/blog1.jpeg");
   background-size: cover;
   background-repeat: no-repeat;
-  height: 70vh;
+  height: 50vh;
 }
 
 .contactPage header {
-  background-image: url("../delicious-assets/contact-1.jpeg");
+  background-image: url("../deliciousAssets/contact1.jpeg");
   background-size: cover;
   background-repeat: no-repeat;
-  height: 70vh;
+  height: 50vh;
 }
 
 .menu {
@@ -328,4 +328,22 @@ header ul {
 
 header a {
   padding: 10px;
+}
+
+img {
+  width: 100%;
+  display: block;
+}
+
+.recipes {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
