--- a/styles/partials/_index.scss
+++ b/styles/partials/_index.scss
@@ -4,7 +4,33 @@ img {
 }
 
 .recipes {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
+}
+
+.indexPage h2 {
+    position: relative;
+}
+
+.divider {
+    width: 10rem;
+    height: 5px;
+    position: absolute;
+    bottom: 0;
+    left: 45%;
+    background-color: $secColour;
+}
+
+.recipesContent {
+    padding: 4rem;
+}
+
+.gallery {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+}
+
+.testimonial {
+    background-color: $lightSecColour;
+
 }
