--- a/styles/partials/_typography.scss
+++ b/styles/partials/_typography.scss
@@ -1,6 +1,3 @@
-$mainFont: 'Lora', serif;
-$titleFont: 'Raleway', sans-serif;
-
 html {
     font-size: 62.5%;
 }
@@ -23,8 +20,13 @@ body {
     letter-spacing: 1.1px;
 }
 
+.indexPage section {
+    text-align: center;
+}
+
 footer h3 {
     font-family: $titleFont;
+    color: $lightColour;
     font-size: 1.8rem;
     font-weight: 700;
     line-height: 2.4rem;
@@ -37,6 +39,7 @@ footer a {
     font-size: 1.3rem;
     line-height: 4.4rem;
     letter-spacing: 0.3px;
+    color: $midColour;
 } 
 
 blockquote {
@@ -45,4 +48,4 @@ blockquote {
     font-style: italic;
     letter-spacing: 0.6px;
 }
-
+ 
