--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -3,4 +3,7 @@
 @import "partials/typography";
 @import "partials/header";
 @import "partials/nav";
-@import "partials/index"
+@import "partials/index";
+@import "partials/blog";
+@import "partials/contact";
+@import "partials/footer";
