--- a/styles/partials/_index.scss
+++ b/styles/partials/_index.scss
@@ -17,7 +17,7 @@ img {
     height: 5px;
     position: absolute;
     bottom: 0;
-    left: 45%;
+    left: 40%;
     background-color: $secColour;
 }
 
@@ -25,12 +25,45 @@ img {
     padding: 4rem;
 }
 
+.recipeOptions {
+    padding: 50px;
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: 1fr 1fr;
+        li {
+            display: flex;
+            text-align: left;
+                div {
+                    padding: 10px;
+                }
+        }
+}
+
+.restaurantImage {
+    position: relative;
+}
+
+.restaurantMainImage {
+    width: 500px;
+    height: 300px;
+    margin: 0 auto;
+}
+
+.seal {
+    height: 100px;
+    width: 100px;
+    position: absolute;
+    top: -30px;
+    right: 20%;
+}
+
 .gallery {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr), minmax(350px, 1fr));
 }
 
 .testimonial {
     background-color: $lightSecColour;
 
 }
+
