--- a/styles/partials/_nav.scss
+++ b/styles/partials/_nav.scss
@@ -7,7 +7,7 @@ ul {
 header ul {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 header a {
