--- a/styles/partials/_footer.scss
+++ b/styles/partials/_footer.scss
@@ -2,18 +2,11 @@ footer {
     background-color: $darkColour;
 }
 
-.wrapper {
-    max-width: 1300px;
-    width: 80%;
-    margin: 0 auto;
-    padding: 5% 0;
-}
-
 .footer {
     text-align: left;
     display: grid;
     grid-gap: 20px;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 }
 
 .footerLogo {
@@ -25,9 +18,13 @@ footer {
 
 
 .footer p,
-.footer li,
-form {
+.footer li:not(:last-child),
+footer form {
     border-bottom: 0.5px solid $midColour;
+}
+
+.footer .socials li {
+    border-bottom: none;
 }
 
 .subscribeForm input[type="email"] {
