--- a/styles/partials/_index.scss
+++ b/styles/partials/_index.scss
@@ -1,6 +1,13 @@
 img {
-    width: 100%;
+    max-width: 100%;
     display: block;
+}
+
+.wrapper {
+    max-width: 1800px;
+    width: 90%;
+    margin: 0 auto;
+    padding: 5% 0;
 }
 
 .recipes {
@@ -59,7 +66,8 @@ img {
 
 .gallery {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr), minmax(350px, 1fr));
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: auto;
 }
 
 .testimonial {
